--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
+        #app{
+            margin: 100px;
+        }
+        body{
+            font-size: var(--font-size);
+        }
     </style>
     <style>
         .g-button{
@@ -29,6 +35,15 @@
             border-radius: var(--border-radius);
             border: 1px solid var(--border-color);
             background: var(--button-bg);
+        }
+        .g-button:hover{
+            border-color: var(--border-color-hover);
+        }
+        .g-button:active{
+            background-color: var(--button-active-bg);
+        }
+        .g-button:foucs{
+            outline: none;
         }
     </style>
 </head>
