--- a/index.html
+++ b/index.html
@@ -27,25 +27,6 @@
             font-size: var(--font-size);
         }
     </style>
-    <style>
-        .g-button{
-            font-size: var(--font-size);
-            height: var(--button-height);
-            padding: 0 1em;
-            border-radius: var(--border-radius);
-            border: 1px solid var(--border-color);
-            background: var(--button-bg);
-        }
-        .g-button:hover{
-            border-color: var(--border-color-hover);
-        }
-        .g-button:active{
-            background-color: var(--button-active-bg);
-        }
-        .g-button:foucs{
-            outline: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -58,16 +39,9 @@
 
 
 
-    <script src="./node_modules/vue/dist/vue.min.js"></script>
-    <script src="./button.js"></script>
+    <script src="./src/app.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            data(){
-                return{
-                }
-            }
-        })
+    
     </script>
 </body>
 
