--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
             font-size: var(--font-size);
         }
     </style>
+    <style>
+        .icon{
+            width: 1em;
+            height: 1em;
+        }
+    </style>
 </head>
 
 <body>
     <div id="app">
-        <g-button></g-button>
+        <g-button icon="settings"></g-button>
     </div>
 
 
@@ -40,9 +46,7 @@
 
 
     <script src="./src/app.js"></script>
-    <script>
-    
-    </script>
+    <script src="//at.alicdn.com/t/font_1145862_m3vooc09w4n.js"></script>
 </body>
 
 </html>
