--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
         }
     </style>
     <style>
-        .icon{
-            width: 1em;
-            height: 1em;
-        }
+        
     </style>
 </head>
 
 <body>
     <div id="app">
-        <g-button icon="settings"></g-button>
+        <g-button icon="settings" icon-position="right">按钮</g-button>
     </div>
 
 
