--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 <body>
     <div id="app">
-        <g-button icon="settings" icon-position="right">按钮</g-button>
+        <n-button icon="settings" icon-position="right">按钮</n-button>
+        <n-icon name="download"></n-icon>
     </div>
 
 
