添加加载图案及动画

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ninja-ui</title>
     <style>
-        *{
-            margin:0; padding:0; box-sizing: border-box;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        :root{
+
+        :root {
             --button-height: 32px;
             --font-size: 14px;
             --button-bg: white;
@@ -20,15 +23,17 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
-        #app{
+
+        #app {
             margin: 100px;
         }
-        body{
+
+        body {
             font-size: var(--font-size);
         }
     </style>
     <style>
-        
+
     </style>
 </head>
 
@@ -44,7 +49,7 @@
 
 
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1145862_m3vooc09w4n.js"></script>
+    <script src="//at.alicdn.com/t/font_1145862_u39ktphosd.js"></script>
 </body>
 
 </html>
