n-button-group检测子元素是否是button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <n-button icon="settings" icon-position="right">按钮</n-button>
         <n-icon name="download"></n-icon>
         <n-button-group>
-            <n-button icon="left">上一页</n-button>
+            <div><n-button icon="left">上一页</n-button></div>
             <n-button>更多</n-button>
             <n-button icon="right" icon-position="right">下一页</n-button>
         </n-button-group>
