取消对阿里font库的依赖，减少配置

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1145862_u39ktphosd.js"></script>
+    <script src="./src/svg.js"></script>
 </body>
 
 </html>
