--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <n-button>更多</n-button>
             <n-button icon="right" icon-position="right">下一页</n-button>
         </n-button-group>
+        <n-input></n-input>
     </div>
 
 
@@ -56,7 +57,6 @@
 
 
     <script src="./src/app.js"></script>
-    <script src="./src/svg.js"></script>
 </body>
 
 </html>
