--- a/index.html
+++ b/index.html
@@ -33,22 +33,31 @@
         }
     </style>
     <style>
-
+        .box{
+            margin:20px 20px;
+        }
     </style>
 </head>
 
 <body>
     <div id="app">
-        <div id="test"></div>
-        <n-button :loading="loading" icon-position="right" @click="loading = !loading">按钮</n-button>
-        <n-button icon="settings" icon-position="right">按钮</n-button>
-        <n-icon name="download"></n-icon>
-        <n-button-group>
-            <n-button icon="left">上一页</n-button>
-            <n-button>更多</n-button>
-            <n-button icon="right" icon-position="right">下一页</n-button>
-        </n-button-group>
-        <n-input></n-input>
+        <div class="box">
+            <n-button :loading="loading" icon-position="right" @click="loading = !loading">按钮</n-button>
+            <n-button icon="settings" icon-position="right">按钮</n-button>
+            <n-icon name="download"></n-icon>
+            <n-button-group>
+                <n-button icon="left">上一页</n-button>
+                <n-button>更多</n-button>
+                <n-button icon="right" icon-position="right">下一页</n-button>
+            </n-button-group>
+        </div>
+        <div class="box">
+            <n-input value="张三" disabled></n-input>
+            <n-input value="李四" readonly></n-input>
+        </div>
+        <div class="box">
+            <n-input value="王" error="姓名不能少于2个字"></n-input>
+        </div>
     </div>
 
 
