完善Input的CSS，添加Input的测试用例

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <n-input value="李四" readonly></n-input>
         </div>
         <div class="box">
-            <n-input value="王" error="姓名不能少于2个字"></n-input>
+            <n-input value="王" @change="inputChange" error="姓名不能少于2个字"></n-input>
         </div>
     </div>
 
