--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         }
     </style>
     <style>
-        .box{
-            margin:20px 20px;
+        .box {
+            margin: 20px 20px;
         }
     </style>
 </head>
@@ -52,6 +52,7 @@
             </n-button-group>
         </div>
         <div class="box">
+            <n-input v-model="message"></n-input>
             <n-input value="张三" disabled></n-input>
             <n-input value="李四" readonly></n-input>
         </div>
