--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
 <body>
     <div id="app">
         <n-row>
-            <n-col span="2"></n-col>
-            <n-col span="22"></n-col>
+            <n-col span="2">11</n-col>
+            <n-col span="22">11</n-col>
+        </n-row>
+        <n-row gutter="20">
+            <n-col span="2">11</n-col>
+            <n-col span="22">11</n-col>
         </n-row>
         <n-row>
             <n-col span="4"></n-col>
-            <n-col span="20"></n-col>
+            <n-col span="20" offset="2"></n-col>
+
         </n-row>
         <div class="box">
             <n-button :loading="loading" icon-position="right" @click="loading = !loading">按钮</n-button>
