--- a/index.html
+++ b/index.html
@@ -36,18 +36,39 @@
         .box {
             margin: 20px 20px;
         }
+        .demo{
+            background: #ddd;
+            height: 100px;
+        }
+        
     </style>
 </head>
 
 <body>
     <div id="app">
         <n-row>
-            <n-col span="2">11</n-col>
-            <n-col span="22">11</n-col>
+            <n-col span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
+            <n-col  span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
+            <n-col span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
+            <n-col span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
+            <n-col span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
+            <n-col  span="24"  :ipad="{span: 12}" :narrow-pc="{span:8}">
+                <div class="demo"></div>
+            </n-col>
         </n-row>
         <n-row>
-            <n-col span="2" :phone="{span:12}" :pc="{span: 22}">111111111</n-col>
-            <n-col span="22"  :phone="{span:12}" :pc="{span: 2}">11</n-col>
+            <n-col span="2"  :pc="{span: 22}">111111111</n-col>
+            <n-col span="22"  :pc="{span: 2}">11</n-col>
         </n-row>
         <n-row gutter="20">
             <n-col span="2">11</n-col>
