--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         .sider {
             background: #333;
-            width: 200px;
+            width: 500px;
         }
 
         .header {
@@ -47,6 +47,10 @@
         .footer {
             background: #ccc;
             height: 50px;
+        }
+        .sider.fade-enter,
+        .sider.fade-leave-to {
+            margin-left: -500px !important;
         }
     </style>
 </head>
