--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 
 <body>
     <div id="app">
-        <button @click="showToast">点击</button>
+        <button @click="showToastTop">top</button>
+        <button @click="showToastMiddle">middle</button>
+        <button @click="showToastBottom">bottom</button>
+
     </div>
 
 
