--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <template v-slot:actions>
                     设置
                 </template>
-                <n-tabs-item name="woman">
+                <n-tabs-item name="woman" disabled>
                     美女
                 </n-tabs-item>
                 <n-tabs-item name="finance">
