--- a/index.html
+++ b/index.html
@@ -61,13 +61,21 @@
         <button @click="showToastMiddle">middle</button>
         <button @click="showToastBottom">bottom</button>
         
-        <n-popover position="right">
+        <n-popover position="right" >
             <template v-slot:content>
                 我是内容
             </template>
             <n-button>点我</n-button>
         </n-popover>
+
         <n-popover position="top">
+            <template v-slot:content>
+                我是内容
+            </template>
+            <n-button>点我</n-button>
+        </n-popover>
+
+        <n-popover position="right" trigger="hover">
             <template v-slot:content>
                 我是内容
             </template>
