解决鼠标移到内容区后再移到按钮上内容消失的问题，并优化内存

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
         <n-popover position="top">
             <template v-slot:content>
+                <a href="https://www.baidu.com">我我我我无呜呜呜呜</a>
                 我是内容
             </template>
             <n-button>点我</n-button>
@@ -77,6 +78,7 @@
 
         <n-popover position="left" trigger="hover">
             <template v-slot:content>
+                
                 我是内容
             </template>
             <n-button>点我</n-button>
