--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            font-size: var(--font-size);
+            font-size: 16px;
         }
     </style>
     <style>
