--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <n-collapse-item title="体育222" name="2">内容222</n-collapse-item>
             <n-collapse-item title="体育333" name="3">内容333</n-collapse-item>
         </n-collapse>
+
+    <n-button>默认按钮</n-button>
+        
        
     </div>
 
